# sp2023-class-codes

./: README.md
week 10 - Templates/adapter_design_pattern/: Captain.cpp  Captain.hpp  FishingBoat.cpp  FishingBoat.hpp  FishingBoatAdapter.cpp  FishingBoatAdapter.hpp  Makefile  RowingBoat.hpp  main.cpp
week 14 - Multi-threading/basic_thread_example/: Makefile  threads.cpp
week 2 - A Quick C Exercise/structs/: structs.c
week 3 - Pointers and Linked lists/function_pointers/: function_pointer.c  function_pointer.h  main.c  math_functions.c  math_functions.h
week 3 - Pointers and Linked lists/linked_list/: Makefile  linked_lists.c
week 3 - Pointers and Linked lists/static_const/: const_example.c  const_example.h  main.c  static_variable.c  static_variable_proto.c  static_variable_proto.h
week 5 - Singleton/singleton/: FileIO.cpp  (+8 more)
week 9 - Unit Testing and Strategy Design Pattern/testing_examples/example_2/factory_design_pattern/: CMakeLists.txt
week 9 - Unit Testing and Strategy Design Pattern/testing_examples/example_2/factory_design_pattern/code/inc/: CoinFactory.hpp  CoinType.hpp  GoldCoin.hpp  SilverCoin.hpp
week 9 - Unit Testing and Strategy Design Pattern/testing_examples/example_2/factory_design_pattern/code/src/: CoinFactory.cpp  GoldCoin.cpp  SilverCoin.cpp  UndefinedCoinType.cpp  main.cpp
week 9 - Unit Testing and Strategy Design Pattern/testing_examples/example_2/factory_design_pattern/test/inc/: CoinFactoryTest.hpp
week 9 - Unit Testing and Strategy Design Pattern/testing_examples/example_2/factory_design_pattern/test/src/: CoinFactoryTest.cpp
(+66 files in other folders)
